--- a/src/step2/app/app.component.html
+++ b/src/step2/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+<div>
+  <h1>
+    User Admin
+  </h1>
+  <div>
+      <app-user-container></app-user-container>
+  </div>
+</div>
