--- a/src/step3/app/users/users-container/user-container.component.html
+++ b/src/step3/app/users/users-container/user-container.component.html
@@ -26,5 +26,8 @@
     <div>
       email: {{ currentUser.email }}
     </div>
+    <div>
+      Job Title: {{ currentUser.jobTitle }}
+    </div>
   </div>
 </div>
