step 10 -reactive forms

--- a/src/step10/app/users/user-new-container/user-new-container.component.html
+++ b/src/step10/app/users/user-new-container/user-new-container.component.html
@@ -1,1 +1,2 @@
-<app-user-form (formSubmitted)="onSubmit($event)"  ></app-user-form>
+<!--<app-user-form (formSubmitted)="onSubmit($event)"  ></app-user-form>-->
+<app-user-form-reactive (formSubmitted)="onSubmit($event)" ></app-user-form-reactive>
