--- a/src/step3/app/users/users-container/user-container.component.css
+++ b/src/step3/app/users/users-container/user-container.component.css
@@ -1,11 +1,14 @@
 .user-item{
-   width: 300px;
+   /*width: 300px;*/
    border-radius: 10px;
    border: solid 1px lightgray;
    padding: 10px;
    display: flex;
 }
 
+.row{
+  padding: 10px;
+}
 
 .user-item img{
   width: 100px;
