--- a/src/step3/app/users/users-container/user-container.component.html
+++ b/src/step3/app/users/users-container/user-container.component.html
@@ -1,33 +1,41 @@
-<div>
-  <div>
-    id: {{ currentUser.id }}
-  </div>
-  <div>
-    <input type="text" [value]="currentUser.username" #usernameInput placeholder="Enter user name" />
-  </div>
-  <div>
-    <input type="text" [value]="currentUser.email" #emailInput placeholder="Enter email" />
-  </div>
-  <div>
-    <button (click)="updateUser(usernameInput.value,emailInput.value)" >Save</button>
-  </div>
-</div>
-<div class="user-item">
-  <div>
-      <img [src]="currentUser.info.avatar" />
-  </div>
-  <div>
-    <div>
-      id: {{ currentUser.id}}
+<div class="container">
+  <div class="row">
+    <div class="form-group">
+      <div>
+        id: {{ currentUser.id }}
+      </div>
+      <div>
+        <input class="form-control" type="text" [value]="currentUser.username" #usernameInput placeholder="Enter user name" />
+      </div>
+      <div>
+        <input class="form-control" type="text" [value]="currentUser.email" #emailInput placeholder="Enter email" />
+      </div>
     </div>
-    <div>
-      username:{{ currentUser.username}}
-    </div>
-    <div>
-      email: {{ currentUser.email }}
-    </div>
-    <div>
-      Job Title: {{ currentUser.jobTitle }}
+      <div>
+        <button class="btn btn-default" (click)="updateUser(usernameInput.value,emailInput.value)" >Save</button>
+      </div>
+  </div>
+  <div class="row">
+
+    <div class="col-sm-4 user-item">
+      <div>
+          <img class="img-thumbnail" [src]="currentUser.info.avatar" />
+      </div>
+      <div>
+        <div>
+          id: {{ currentUser.id}}
+        </div>
+        <div>
+          username:{{ currentUser.username}}
+        </div>
+        <div>
+          email: {{ currentUser.email }}
+        </div>
+        <div>
+          Job Title: {{ currentUser.jobTitle }}
+        </div>
+      </div>
     </div>
   </div>
+
 </div>
