--- a/src/step5/app/users/users-list/users-list.component.html
+++ b/src/step5/app/users/users-list/users-list.component.html
@@ -1,22 +1,25 @@
-<div *ngFor="let user of users">
-  <div class="user-item" (click)="onItemClicked(user)"[ngClass]="{selected:currentUser && currentUser.id === user.id}" >
-    <div>
-      <img [src]="user.info.avatar" />
+<div class="container">
+  <div class="row" *ngFor="let user of users">
+    <div class="col-sm-4 user-item" (click)="onItemClicked(user)"[ngClass]="{selected:currentUser && currentUser.id === user.id}" >
+      <div>
+        <img class="img-thumbnail" [src]="user.info.avatar" />
+      </div>
+      <div>
+        <div>
+          id: {{ user.id}}
+        </div>
+        <div>
+          username:{{ user.username  }}
+        </div>
+        <div>
+          email: {{ user.email }}
+        </div>
+        <div>
+          Job Title: {{ user.info.jobTitle }}
+        </div>
+      </div>
     </div>
-    <div>
-      <div>
-        id: {{ user.id}}
-      </div>
-      <div>
-        username:{{ user.username}}
-      </div>
-      <div>
-        email: {{ user.email }}
-      </div>
-      <div>
-        Job Title: {{ user.info.jobTitle }}
-      </div>
-    </div>
+
   </div>
 
 </div>
