--- a/src/step6/app/users/user-edit/user-edit.component.html
+++ b/src/step6/app/users/user-edit/user-edit.component.html
@@ -1,13 +1,19 @@
-<div>
-  id: {{ user.id }}
-</div>
-<div>
-  <input type="text" [value]="user.username" #usernameInput placeholder="Enter user name" />
-</div>
-<div>
-  <input type="text" [value]="user.email" #emailInput placeholder="Enter email" />
-</div>
-<div>
-  <button (click)="onSaveClicked(usernameInput.value,emailInput.value)" >Save</button>
-  <button (click)="onDeleteClicked(user)" >Delete</button>
+<div class="container">
+  <div class="form-group">
+
+    <div>
+      Id: {{ user.id }}
+    </div>
+    <div>
+      <input class="form-control" type="text" [value]="user.username" #usernameInput placeholder="Enter user name" />
+    </div>
+    <div>
+      <input class="form-control" type="text" [value]="user.email" #emailInput placeholder="Enter email" />
+    </div>
+
+  </div>
+  <div class="btn-group">
+    <button class="btn btn-default" (click)="onSaveClicked(usernameInput.value,emailInput.value)" >Save</button>
+    <button class="btn btn-danger" (click)="onDeleteClicked(user)" >Delete</button>
+  </div>
 </div>
