--- a/src/step8/app/app.component.html
+++ b/src/step8/app/app.component.html
@@ -1,8 +1,8 @@
 <div>
-  <h1>
+  <h1 class="page-header">
     User Admin
   </h1>
-  <div>
+  <div class="container-fluid">
      <router-outlet></router-outlet>
   </div>
 </div>
