Minor bug fixing, version updated to angular 8

--- a/src/step3/app/users/users-container/user-container.component.html
+++ b/src/step3/app/users/users-container/user-container.component.html
@@ -32,7 +32,7 @@
           email: {{ currentUser.email }}
         </div>
         <div>
-          Job Title: {{ currentUser.jobTitle }}
+          Job Title: {{ currentUser.info.jobTitle }}
         </div>
       </div>
     </div>
